--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@orbs-network/ton-access": "^2.3.3",
     "@ton/core": "^0.62.0",
     "@ton/crypto": "^3.3.0",
     "@tonconnect/sdk": "^3.3.1",
