--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,34 @@
 # Dependencies
 node_modules/
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-.Python
-env/
-venv/
-ENV/
-.venv
+/.pnp
+.pnp.js
 
-# Build outputs
-dist/
-build/
-*.egg-info/
-target/
-*.class
+# Testing
+/coverage
 
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
+# Next.js
+/.next/
+/out/
+
+# Production
+/build
+
+# Misc
 .DS_Store
+*.pem
 
-# Environment variables
-.env
-.env.local
-.env.*.local
-
-# Logs
-logs/
-*.log
+# Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Testing
-coverage/
-.nyc_output/
-*.test.js.snap
+# Local env files
+.env*.local
+.env
 
-# Temporary files
-tmp/
-temp/
-*.tmp
+# Vercel
+.vercel
 
-# OS
-Thumbs.db
-
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
