--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,35 +1,5 @@
-# Dependencies
-node_modules/
-/.pnp
-.pnp.js
-
-# Testing
-/coverage
-
-# Next.js
-/.next/
-/out/
-
-# Production
-/build
-
-# Misc
-.DS_Store
-*.pem
-
-# Debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Local env files
-.env*.local
-.env
-
-# Vercel
+node_modules
+.next
+.env.local
 .vercel
-
-# TypeScript
-*.tsbuildinfo
-next-env.d.ts
 
