--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,10 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@types/node": "24.10.0",
-    "@types/react": "18.3.12",
-    "@types/react-dom": "18.3.1",
-    "autoprefixer": "10.4.21",
-    "postcss": "8.5.6",
-    "tailwindcss": "3.4.17",
-    "typescript": "5.9.3"
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   }
 }
 
