--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@orbs-network/ton-access": "^2.3.3",
+    "@ton/core": "^0.62.0",
+    "@ton/crypto": "^3.3.0",
+    "@ton/ton": "^16.0.0",
+    "@tonconnect/sdk": "^3.3.1",
+    "@tonconnect/ui-react": "^2.3.1",
     "next": "14.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1"
@@ -19,4 +25,3 @@
     "typescript": "^5.3.3"
   }
 }
-
