--- a/package.json
+++ b/package.json
@@ -1,20 +1,12 @@
 {
-  "name": "tonix-chain",
-  "version": "1.0.0",
+  "name": "tonix-chain-proxy",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "14.2.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "install": "cd frontend && npm install",
+    "build": "cd frontend && npm run build",
+    "start": "cd frontend && npm run start"
   },
   "devDependencies": {
-    "@types/node": "24.10.0",
-    "@types/react": "19.2.2",
-    "typescript": "5.9.3"
+    "typescript": "^5.9.3"
   }
 }
