--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@ton/ton": "^16.0.0",
     "@tonconnect/sdk": "^3.3.1",
     "@tonconnect/ui-react": "^2.3.1",
+    "framer-motion": "^12.23.24",
     "next": "^14.2.33",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
