fix: correct vercel.json config and ensure Next.js build passes

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,15 @@
 {
-  "buildCommand": "cd frontend && npm install && npm run build",
-  "installCommand": "cd frontend && npm install",
-  "outputDirectory": "frontend/.next",
-  "framework": "nextjs"
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/next"
+    }
+  ],
+  "framework": "nextjs",
+  "env": {
+    "NEXT_PUBLIC_NETWORK": "mainnet",
+    "NEXT_PUBLIC_CONTRACT_ADDRESS": "EQAt1tW6ySperEXATXGHNo63JizWDp6qjn9RgtYp5bCgtnqx",
+    "NEXT_PUBLIC_TONCENTER_API": "https://toncenter.com/api/v2/jsonRPC"
+  }
 }
