--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,6 +1,5 @@
 {
   "url": "https://tonix-chain.vercel.app",
-  "name": "Tonix Chain",
-  "iconUrl": "https://tonix-chain.vercel.app/favicon.ico"
+  "name": "TONIX Chain",
+  "iconUrl": "https://tonix-chain.vercel.app/logo.png"
 }
-
