--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "^14.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.6.0",
     "tonweb": "^0.0.66"
   },
   "devDependencies": {
