--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@ton/ton": "^16.0.0",
     "@tonconnect/sdk": "^3.3.1",
     "@tonconnect/ui-react": "^2.3.1",
+    "@types/canvas-confetti": "^1.9.0",
+    "canvas-confetti": "^1.9.4",
     "framer-motion": "^12.23.24",
+    "lottie-react": "^2.4.1",
     "next": "^14.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
