--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^16.0.1",
     "@orbs-network/ton-access": "^2.3.3",
     "@sentry/nextjs": "^10.23.0",
     "@ton/core": "^0.62.0",
@@ -17,14 +18,19 @@
     "@tonconnect/sdk": "^3.3.1",
     "@tonconnect/ui-react": "^2.3.1",
     "@types/canvas-confetti": "^1.9.0",
+    "@types/uuid": "^10.0.0",
     "canvas-confetti": "^1.9.4",
+    "crypto": "^1.0.1",
     "framer-motion": "^12.23.24",
     "lottie-react": "^2.4.1",
     "next": "^14.2.0",
+    "posthog-js": "^1.290.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.6.0",
-    "tonweb": "^0.0.66"
+    "tonweb": "^0.0.66",
+    "uuid": "^13.0.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/node": "^24.10.0",
