fix: valid TonConnect manifest + fallback pages for wallets

--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,5 +1,7 @@
 {
   "url": "https://tonix-chain.vercel.app",
   "name": "TONIX Chain",
-  "iconUrl": "https://tonix-chain.vercel.app/logo.png"
+  "iconUrl": "https://tonix-chain.vercel.app/logo.png",
+  "termsOfUseUrl": "https://tonix-chain.vercel.app/terms",
+  "privacyPolicyUrl": "https://tonix-chain.vercel.app/privacy"
 }
