feat: TON Battle (WS + BattlePool) and NFT Tickets/Winners (contracts + API + UI)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
     "types": ["node", "react", "react-dom"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules", "contracts", "backend", "build"]
+  "exclude": ["node_modules", "contracts", "backend", "build", "scripts"]
 }
