--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.6.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tonweb": "^0.0.66",
     "uuid": "^13.0.0",
     "zod": "^3.25.76"
