feat(v4.0): Cyber Galaxy theme, sound system, Galaxy Run game, onchain events

--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@tonconnect/sdk": "^3.3.1",
     "@tonconnect/ui-react": "^2.3.1",
     "@types/canvas-confetti": "^1.9.0",
+    "@types/howler": "^2.2.12",
     "@types/uuid": "^10.0.0",
     "canvas-confetti": "^1.9.4",
     "crypto": "^1.0.1",
     "framer-motion": "^12.23.24",
+    "howler": "^2.2.4",
     "lottie-react": "^2.4.1",
     "next": "^14.2.0",
     "posthog-js": "^1.290.0",
