--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,55 +1,30 @@
-name: Deploy Tonix Lottery (Mainnet)
+name: 🚀 TONIX CHAIN Auto Deploy
 
 on:
   push:
-    branches: [ main, master ]
-  workflow_dispatch:
+    branches: [ "main" ]
 
 jobs:
-  build-test-deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./contracts
-    
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: contracts/package-lock.json
+          node-version: 18
 
       - name: Install dependencies
-        run: |
-          cd contracts
-          npm ci
+        run: npm install --legacy-peer-deps
 
-      - name: Build contract
-        run: npx blueprint build TonixLottery
+      - name: Build TONIX CHAIN
+        run: npm run build
 
-      - name: Run tests
-        run: npx vitest run --reporter=verbose || echo "⚠️ Tests require local setup"
-
-      - name: Deploy to TON mainnet
-        if: github.event_name == 'workflow_dispatch' || github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
+      - name: Deploy to Vercel
         env:
-          MNEMONIC: ${{ secrets.TONIX_MAINNET_MNEMONIC }}
-          TICKET_PRICE: ${{ vars.TICKET_PRICE || '1' }}
-          TONCENTER_API_KEY: ${{ secrets.TONCENTER_API_KEY }}
-        run: |
-          cd contracts
-          npx tsx scripts/deploy.ts
-
-      - name: Deployment summary
-        if: always()
-        run: |
-          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
-          echo "✅ Build: OK"
-          echo "🧪 Tests: Completed"
-          echo "🚀 Deploy: ${{ job.status == 'success' && 'Success' || 'Skipped/Error' }}"
-          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
-
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+        run: npx vercel --prod --force --confirm --yes
