chore(ci): add Telegram deployment notifications

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: 🚀 TONIX CHAIN Auto Deploy
+name: 🚀 TONIX CHAIN Auto Deploy + Telegram Notify
 
 on:
   push:
@@ -23,8 +23,21 @@ jobs:
         run: npm run build
 
       - name: Deploy to Vercel
+        id: vercel_deploy
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-        run: npx vercel --prod --force --confirm --yes
+        run: |
+          npx vercel --prod --force --confirm --yes
+          echo "DEPLOY_URL=https://tonix-chain.vercel.app" >> $GITHUB_ENV
+
+      - name: Notify Telegram
+        if: always()
+        run: |
+          STATUS=${{ job.status }}
+          MESSAGE="🚀 *TONIX CHAIN Deployment Report*\n\n*Status:* ${STATUS}\n*Branch:* main\n*Time:* $(date '+%H:%M:%S')\n\n🌐 [Open Mini App](https://t.me/tonixchain_lottery_bot/app?startapp=lottery)\n💎 [Vercel Deploy](${{ env.DEPLOY_URL }})"
+          curl -s -X POST https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage \
+          -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
+          -d parse_mode="Markdown" \
+          -d text="$MESSAGE"
