--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: 🚀 TONIX CHAIN Auto Deploy + Telegram Notify
+name: 🚀 TONIX CHAIN Auto Deploy + On-Chain Telegram Notify
 
 on:
   push:
@@ -28,7 +28,25 @@ jobs:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-        run: npx vercel --prod --force --confirm --yes
+        run: |
+          npx vercel --prod --force --confirm --yes
+          echo "DEPLOY_URL=https://tonix-chain.vercel.app" >> $GITHUB_ENV
+
+      - name: Fetch TON contract balance
+        id: ton_balance
+        run: |
+          CONTRACT="EQBtB8vIHgdO49Ih02Yt9kD5tDKxOTrFgZHkRkAjFTrvJziT"
+          RESPONSE=$(curl -s "https://toncenter.com/api/v2/getAddressBalance?address=$CONTRACT")
+          BALANCE=$(echo $RESPONSE | jq -r '.result' | awk '{printf "%.3f", $1/1000000000}')
+          echo "BALANCE=${BALANCE}" >> $GITHUB_ENV
+
+      - name: Fetch last on-chain event
+        id: ton_event
+        run: |
+          CONTRACT="EQBtB8vIHgdO49Ih02Yt9kD5tDKxOTrFgZHkRkAjFTrvJziT"
+          RESPONSE=$(curl -s "https://toncenter.com/api/v2/getTransactions?address=$CONTRACT&limit=1")
+          EVENT=$(echo $RESPONSE | jq -r '.result[0].in_msg.source | if . == null then "—" else . end')
+          echo "EVENT=${EVENT}" >> $GITHUB_ENV
 
       - name: Notify Telegram
         if: always()
@@ -36,7 +54,8 @@ jobs:
           DEPLOY_URL: https://tonix-chain.vercel.app
         run: |
           STATUS=${{ job.status }}
-          MESSAGE="🚀 *TONIX CHAIN Deployment Report*\n\n*Status:* ${STATUS}\n*Branch:* main\n*Time:* $(date '+%H:%M:%S')\n\n🌐 [Open Mini App](https://t.me/tonixchain_lottery_bot/app?startapp=lottery)\n💎 [Vercel Deploy](${DEPLOY_URL})"
+          VERSION=$(grep '"version"' package.json | head -1 | awk -F'"' '{print $4}')
+          MESSAGE="🚀 *TONIX CHAIN Deployment Report*\n\n*Status:* ${STATUS}\n*Version:* ${VERSION}\n*Branch:* main\n*Time:* $(date '+%H:%M:%S')\n\n💎 *Contract Balance:* ${BALANCE} TON\n📡 *Last Event:* ${EVENT}\n\n🌐 [Open Mini App](https://t.me/tonixchain_lottery_bot/app?startapp=lottery)\n🔗 [Vercel Deploy](${DEPLOY_URL})"
           curl -s -X POST https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage \
           -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
           -d parse_mode="Markdown" \
