ci: enable auto-release with Telegram changelog notifier

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,15 +1,17 @@
-name: 🚀 TONIX CHAIN Auto Deploy + On-Chain Telegram Notify
+name: 🚀 TONIX CHAIN Auto Deploy + Release + Telegram Notify
 
 on:
   push:
     branches: [ "main" ]
 
 jobs:
-  build-and-deploy:
+  build-and-release:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -50,13 +52,30 @@ jobs:
           if [ -z "$EVENT" ]; then EVENT="—"; fi
           echo "EVENT=${EVENT}" >> $GITHUB_ENV
 
-      - name: Get commit info
+      - name: Get commit info and changelog
         id: commit_info
         run: |
           AUTHOR=$(git log -1 --pretty=format:'%an')
           MESSAGE=$(git log -1 --pretty=format:'%s')
+          LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
+          NEW_TAG=$(echo $LAST_TAG | awk -F. -v OFS=. '{$NF+=1;print}')
           echo "AUTHOR=${AUTHOR}" >> $GITHUB_ENV
           echo "MESSAGE=${MESSAGE}" >> $GITHUB_ENV
+          echo "NEW_TAG=${NEW_TAG}" >> $GITHUB_ENV
+          echo "📦 New tag: ${NEW_TAG}"
+          CHANGELOG=$(git log ${LAST_TAG}..HEAD --pretty=format:'- %s (%an)' --no-merges || echo "- Initial release")
+          echo "CHANGELOG<<EOF" >> $GITHUB_ENV
+          echo "${CHANGELOG}" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+
+      - name: Create new tag and push
+        env:
+          NEW_TAG: ${{ env.NEW_TAG }}
+        run: |
+          git config user.name "tonix-bot"
+          git config user.email "bot@tonixchain.io"
+          git tag -a ${NEW_TAG} -m "Release ${NEW_TAG}"
+          git push origin ${NEW_TAG}
 
       - name: Notify Telegram
         if: always()
@@ -66,10 +85,12 @@ jobs:
           EVENT: ${{ env.EVENT }}
           AUTHOR: ${{ env.AUTHOR }}
           MESSAGE: ${{ env.MESSAGE }}
+          NEW_TAG: ${{ env.NEW_TAG }}
+          CHANGELOG: ${{ env.CHANGELOG }}
         run: |
           STATUS=${{ job.status }}
-          VERSION=$(grep '"version"' package.json | head -1 | awk -F'"' '{print $4}')
-          MESSAGE_TEXT="🚀 *TONIX CHAIN Deployment Report*\n\n*Status:* ${STATUS}\n*Version:* ${VERSION}\n*Branch:* main\n*Time:* $(date '+%H:%M:%S')\n\n👤 *Author:* ${AUTHOR}\n📝 *Commit:* ${MESSAGE}\n\n💎 *Contract Balance:* ${BALANCE} TON\n📡 *Last Event:* ${EVENT}\n\n🌐 [Open Mini App](https://t.me/tonixchain_lottery_bot/app?startapp=lottery)\n🔗 [Vercel Deploy](${DEPLOY_URL})"
+          VERSION=${NEW_TAG}
+          MESSAGE_TEXT="🚀 *TONIX CHAIN Release Report*\n\n*Status:* ${STATUS}\n*Version:* ${VERSION}\n*Branch:* main\n*Time:* $(date '+%H:%M:%S')\n\n👤 *Author:* ${AUTHOR}\n📝 *Commit:* ${MESSAGE}\n\n📜 *Changelog since last release:*\n${CHANGELOG}\n\n💎 *Contract Balance:* ${BALANCE} TON\n📡 *Last Event:* ${EVENT}\n\n🌐 [Open Mini App](https://t.me/tonixchain_lottery_bot/app?startapp=lottery)\n🔗 [Vercel Deploy](${DEPLOY_URL})"
           curl -s -X POST https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage \
           -d chat_id=${{ secrets.TELEGRAM_CHAT_ID }} \
           -d parse_mode="Markdown" \
