--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,7 +63,7 @@ jobs:
           echo "MESSAGE=${MESSAGE}" >> $GITHUB_ENV
           echo "NEW_TAG=${NEW_TAG}" >> $GITHUB_ENV
           echo "📦 New tag: ${NEW_TAG}"
-          CHANGELOG=$(git log ${LAST_TAG}..HEAD --pretty=format:'- %s (%an)' --no-merges || echo "- Initial release")
+          CHANGELOG=$(git log ${LAST_TAG}..HEAD --pretty=format:'- %s (%an)' --no-merges 2>/dev/null || echo "- Initial release")
           echo "CHANGELOG<<EOF" >> $GITHUB_ENV
           echo "${CHANGELOG}" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
@@ -71,11 +71,12 @@ jobs:
       - name: Create new tag and push
         env:
           NEW_TAG: ${{ env.NEW_TAG }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "tonix-bot"
           git config user.email "bot@tonixchain.io"
-          git tag -a ${NEW_TAG} -m "Release ${NEW_TAG}"
-          git push origin ${NEW_TAG}
+          git tag -a ${NEW_TAG} -m "Release ${NEW_TAG}" || true
+          git push origin ${NEW_TAG} || echo "Tag already exists or push failed"
 
       - name: Notify Telegram
         if: always()
