fix: trigger redeploy from local

--- a/frontend/tonconnect-manifest.json
+++ b/frontend/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
   "url": "https://tonix-chain.vercel.app",
-  "name": "Tonix Chain",
-  "iconUrl": "https://tonix-chain.vercel.app/favicon.ico"
+  "name": "TONIX Lottery",
+  "iconUrl": "https://tonix-chain.vercel.app/icon.png"
 }
