--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-hot-toast": "^2.6.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "swr": "^2.3.6",
     "tonweb": "^0.0.66",
     "uuid": "^13.0.0",
     "zod": "^3.25.76"
